validating user input while signing in

--- a/src/pages/Register/RegisterPage.css
+++ b/src/pages/Register/RegisterPage.css
@@ -96,6 +96,10 @@
   cursor: pointer;
 }
 
+.register--form__btn button:disabled {
+  cursor: not-allowed;
+}
+
 .register--form__details p {
   display: flex;
   flex-direction: row;
