--- a/src/pages/Login/LoginPage.css
+++ b/src/pages/Login/LoginPage.css
@@ -46,6 +46,7 @@
 
 .login--form__data span {
   margin-top: 1rem;
+  color: red;
 }
 
 
@@ -65,6 +66,10 @@
   border-radius: 3rem;
   color: white;
   cursor: pointer;
+}
+
+.login--form__btn button:disabled {
+  cursor: not-allowed;
 }
 
 .login--form__details p {
