--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,89 +1,108 @@
 /* header */
 .header__container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: center;
-    align-items: center;
-    padding: .5rem 1rem;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  align-items: center;
+  padding: 0.5rem 1rem;
 }
 
 .header__title {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-    height: 3rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 3rem;
 }
 
 .header__title h3 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    width: 10%;
-    font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  width: 10%;
+  font-size: 1.5rem;
 }
 
 .header__search {
-    margin-left: 3rem;
-    width: 60%;
+  margin-left: 3rem;
+  width: 60%;
 }
 
 .header__search input {
-    width: 95%;
-    color: white;
-    font-size: 1rem;
+  width: 95%;
+  color: white;
+  font-size: 1rem;
 }
 
 .header__search input::placeholder {
-    color: white;
-    text-align: center;
+  color: white;
+  text-align: center;
 }
 
 .header__auth {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  flex: 1;
 }
 
-.header__auth button:first-of-type {
-    cursor: pointer;
-    outline: none;
-    border: 1px solid white;
-    background-color: transparent;
-    color: white;
-    padding: .5rem 1rem;
-    letter-spacing: 1px;
-    border-radius: 5px;
-    margin-right: 2rem;
+.header--auth__details {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
 }
 
-.header__auth button:last-of-type {
-    cursor: pointer;
-    outline: none;
-    border: 1px solid white;
-    background-color: transparent;
-    color: white;
-    padding: .5rem 1rem;
-    letter-spacing: 1px;
-    border-radius: 5px;
+.header--auth__btn {
+  cursor: pointer;
+  outline: none;
+  border: 1px solid white;
+  background-color: transparent;
+  color: white;
+  padding: 0.5rem 1rem;
+  letter-spacing: 1px;
+  border-radius: 5px;
+  margin-left: 2rem;
+}
+
+.header--auth__signIn {
+  cursor: pointer;
+  outline: none;
+  border: 1px solid white;
+  background-color: transparent;
+  color: white;
+  padding: 0.5rem 1rem;
+  letter-spacing: 1px;
+  border-radius: 5px;
+  margin-right: 2rem;
+}
+
+.header--auth__signUp {
+  cursor: pointer;
+  outline: none;
+  border: 1px solid white;
+  background-color: transparent;
+  color: white;
+  padding: 0.5rem 1rem;
+  letter-spacing: 1px;
+  border-radius: 5px;
 }
 
 .header__btn {
-    background-color: transparent;
-    outline: none;
-    border: 1px solid white;
-    color: white;
-    border-radius: 2rem;
-    font-size: 1rem;
-    margin-left: 8rem;
-    flex: 1;
-    cursor: pointer;
-    padding: .5rem 1.5rem;
-    letter-spacing: 1px;  
+  background-color: transparent;
+  outline: none;
+  border: 1px solid white;
+  color: white;
+  border-radius: 2rem;
+  font-size: 1rem;
+  margin-left: 8rem;
+  flex: 1;
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
+  letter-spacing: 1px;
 }
 
 /* welcome */
@@ -105,8 +124,8 @@
   top: 25%;
   left: 12.5%;
   width: 75%;
-  padding: .5rem;
-  background-color: rgba(0, 0, 0, .5);
+  padding: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.5);
   font-size: 2.5rem;
   font-weight: bold;
 }
@@ -119,7 +138,7 @@
   position: relative;
   width: 100%;
   height: 40rem;
-  background-color: #3F3351;
+  background-color: #3f3351;
 }
 
 .workspace__container h2 {
@@ -168,7 +187,7 @@
 .workspace__image4 {
   position: absolute;
   left: 60%;
-  top:25%;
+  top: 25%;
   height: 50%;
   width: 25%;
   background-color: silver;
@@ -235,7 +254,7 @@
   background-color: transparent;
   margin-right: 1rem;
   color: white;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   border: 1px solid white;
   cursor: pointer;
   border-radius: 3px;
@@ -243,7 +262,6 @@
   letter-spacing: 1px;
   outline: none;
 }
-
 
 .service__container--body {
   position: relative;
@@ -258,7 +276,7 @@
   left: 5%;
   width: 90%;
   height: 30%;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .service__body1--image {
@@ -275,7 +293,7 @@
   display: flex;
   flex-direction: row;
   position: absolute;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   top: 35%;
   left: 5%;
   width: 90%;
@@ -286,7 +304,7 @@
   display: flex;
   flex-direction: row;
   position: absolute;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   top: 67%;
   left: 5%;
   width: 90%;
@@ -360,7 +378,7 @@
   flex: 1;
 }
 
-.contact__form{
+.contact__form {
   width: 100%;
   height: 100%;
 }
@@ -422,7 +440,7 @@
 }
 
 .contact__body--form button {
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   font-size: 1.2rem;
   border: 1px solid white;
   margin-top: 1rem;
@@ -456,7 +474,7 @@
   height: 80%;
   left: 25%;
   width: 50%;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .footer__content--header {
@@ -487,7 +505,6 @@
   justify-content: center;
   width: 100%;
   height: 33%;
-  
 }
 
 .footer__content--body span {
@@ -497,8 +514,6 @@
   width: 20%;
   cursor: pointer;
 }
-
-
 
 .footer__content--end {
   display: flex;
