--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -21,7 +21,6 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  width: 10%;
   font-size: 1.5rem;
 }
 
@@ -54,6 +53,14 @@
   align-items: center;
   justify-content: flex-end;
   width: 100%;
+}
+
+.header--auth__details p {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .header--auth__btn {
@@ -522,4 +529,19 @@
   justify-content: center;
   width: 100%;
   height: 34%;
+}
+
+
+@media screen and (max-width: 600px) {
+  .header__container {
+    padding: 0;
+  }
+
+  .header__title h3 {
+    font-size: 1.2rem;
+  }
+
+  .header__search {
+    margin-left: 1rem;
+  }
 }
