--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -17,7 +17,6 @@
   display: flex;
   flex-direction: row;
   flex: 1;
-  background-color: bisque;
 }
 
 .profile--header {
@@ -27,8 +26,8 @@
   height: 100%;
   align-items: center;
   justify-content: space-between;
-  background-color: blue;
   padding: 0 1rem;
+  border-bottom: 1px solid white;
 }
 
 .profile--body__sidebar {
@@ -47,7 +46,6 @@
   width: 100%;
   height: 100%;
   padding: 1rem;
-  background-color: yellow;
 }
 
 .profile--sidebar__avatar {
@@ -56,7 +54,6 @@
   align-items: center;
   justify-content: center;
   height: 20%;
-  background-color: thistle;
 }
 
 .profile--sidebar__avatar span {
@@ -66,7 +63,6 @@
   border-radius: 50%;
   width: 6rem;
   height: 6rem;
-  background-color: violet;
 }
 
 .profile--sidebar__avatar span img {
@@ -78,5 +74,50 @@
   flex-direction: column;
   width: 100%;
   height: 80%;
-  background-color: tomato;
+}
+
+.profile--sidebar__account {
+  padding-bottom: .5rem;
+  border-bottom: 1px solid white;
+}
+
+.profile--sidebar__account span {
+  color: gainsboro;
+}
+
+.profile--sidebar__account p {
+  cursor: pointer;
+  background-color: grey;
+  margin: .5rem 0;
+}
+
+.profile--sidebar__application {
+  padding-bottom: .5rem;
+  border-bottom: 1px solid white;
+}
+
+.profile--sidebar__application span {
+  color: gainsboro;
+}
+
+.profile--sidebar__application p {
+  margin: .5rem 0;
+  cursor: pointer;
+}
+
+.profile--sidebar__pages span {
+  color: gainsboro;
+}
+
+.profile--sidebar__pages p {
+  margin: .5rem 0;
+  cursor: pointer;
+}
+
+.tab--active {
+  background-color: blue;
+}
+
+.tab {
+  background-color: none;
 }
