--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .profile--container__header {
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: row;
   flex: 1;
+  width: 100%;
 }
 
 .profile--header {
@@ -39,7 +40,10 @@
 
 .profile--body__content {
   display: flex;
-  flex: 1;
+  flex-direction: column;
+  width: 82%;
+  height: 100%;
+
 }
 
 .profile--sidebar__container {
@@ -120,4 +124,13 @@
 
 .tab {
   background-color: none;
+}
+
+.view--service {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: azure;   
+  padding: 1rem 0;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          ;
 }
