--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -180,9 +180,13 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 2rem;
   width: 100%;
   margin-top: 1rem;
   padding-bottom: 5rem;
   border-bottom: 1px solid white;
 }
+
+.profile--data__body--contact span {
+  font-size: 200%;
+};
