--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -202,6 +202,18 @@
   font-size: 200%;
 }
 
+.profile--data__body--contact span a {
+  color: white;
+}
+
+.profile--data__body--contact span:hover {
+  color: grey;
+}
+
+.profile--data__body--contact span a:hover {
+  color: grey;
+}
+
 .profile--data__body--contact h2 {
   display: flex;
   flex-basis: 100%;
