--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -66,6 +66,28 @@
   border-radius: 50%;
   width: 6rem;
   height: 6rem;
+  position: relative;
+}
+
+.profile--sidebar__avatar--edit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 75%;
+  right: 3%;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: white;
+  border: 1px solid var(--brown);
+  cursor: pointer;
+}
+
+.profile--sidebar__avatar--edit:hover {
+  background-color: var(--dkbrown);
+  color: white;
 }
 
 .profile--sidebar__avatar span img {
