--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   width: 100%;
   height: 3rem;
 }
@@ -20,8 +21,24 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-basis: 75%;
   height: 100%;
   font-size: 1.5rem;
+}
+
+.header__tour--btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-end;
+  width: 8%;
+  height: 2.5rem;
+  font-size: 1.5rem;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+  background-color: transparent;
+  color: white;
 }
 
 .header__search {
